--- a/faq/style.scss
+++ b/faq/style.scss
@@ -65,9 +65,12 @@
 .faq-menu{
   li{
     color:$orange;
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     list-style-type: disc;
     margin-left:20px;
+    @media #{$medium-up} {
+      font-size: 1.5rem;
+    }
     &:hover{
       color: $orange-hover;
     }
